# SimpDockerCuberProj

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  app  cmake_install.cmake  deployment.yaml  help.txt  main.cpp  service.yaml
static/: img.png:Zone.Identifier
templates/: index.html
